--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/export/estudiantes/daniel.correa3/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31688077173.properties
+deploy.ant.properties.file=C:\\Users\\LEOTO17\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3185348738.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/apps/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=/apps/glassfish-4.1.1/glassfish
-j2ee.server.instance=[/apps/glassfish-4.1.1/glassfish:/apps/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/apps/glassfish-4.1.1
-selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=/export/estudiantes/daniel.correa3/.netbeans/8.2/build.properties
+j2ee.server.domain=C:/Users/LEOTO17/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+selected.browser=Chrome.INTEGRATED
+user.properties.file=C:\\Users\\LEOTO17\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
